--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "mkdirp": "^0.5.1",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "human-format": "^0.7.0"
   },
   "devDependencies": {
     "array.prototype.find": "^2.0.1",
